--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -59,6 +59,8 @@ CreatorOrganizationNameNotProvided = Ein Organisationsname muss noch angegeben w
 
 CreatorRoleNotProvided = Die Rolle des Urhebers muss angegeben werden.
 
+DateAcceptedNotProvided = [NEW] Bei einer Promotion muss eine Annahmedatum angegeben werden
+
 DateFormatIncorrect = Alle Datumsangaben m\u00FCssen einem der folgenden Formate entsprechen: JJJJ oder JJJJ-MM oder JJJJ-MM-TT.
 
 DateModifiedNotProvided = Das Datum der letzten \u00C4nderung muss eingegeben werden und es muss nach dem 2007-01-01 liegen.
@@ -165,6 +167,8 @@ SourceGenreNotProvided = Wenn bei einer Quelle der Titel angegeben wurde, muss e
 SourceNotProvided = Wenn das Genre "Zeitschriftenartikel", "Buchkapitel" oder "Konferenzbeitrag" gew\u00E4hlt ist, muss mindestens eine Quelle angegeben werden.
 
 SourceTitleNotProvided = Bei den Quellenangaben fehlt der Titel der Quelle.
+
+SourceVolumeNotProvided = [NEW] Der Band der Quelle muss angegeben werden
 
 #
 # JUS BEGIN
