--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -62,6 +62,8 @@ CreatorOrganizationNameNotProvided = An organizations name is not provided.
 
 CreatorRoleNotProvided = A creator's role is not provided.
 
+DateAcceptedNotProvided = [NEW] Bei einer Promotion muss eine Annahmedatum angegeben werden
+
 DateFormatIncorrect = An entered date is not in one of the following formats: YYYY or YYYY-MM or YYYY-MM-DD.
 
 DateModifiedNotProvided = The "modified" date has to be provided and it has to be after 2007-01-01.
@@ -171,6 +173,8 @@ SourceGenreNotProvided = If a source title was entered, a source genre has to be
 SourceNotProvided = If genre is equal to "Journal Article", "Book Chapter" or "Conference Paper" at least one source has to be provided.
 
 SourceTitleNotProvided = Source information was entered without a source title.
+
+SourceVolumeNotProvided = [NEW] Der Band der Quelle muss angegeben werden
 
 #
 # JUS BEGIN
