--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -60,6 +60,8 @@ CreatorOrganizationNameNotProvided = No se ha proporcionado un nombre de Organiz
 
 CreatorRoleNotProvided = No se ha proporcionado un rol de creador.
 
+DateAcceptedNotProvided = [NEW] Bei einer Promotion muss eine Annahmedatum angegeben werden
+
 DateFormatIncorrect = Una fecha introducida no est\u00E1 en alguno de los formatos siguientes:YYYY or YYYY-MM o YYYY-MM-DD.
 
 DateModifiedNotProvided = Se debe proporcionar la fecha de modificaci\u00F3n y debe ser anterior a 2007-01-01.
@@ -144,6 +146,8 @@ SourceGenreNotProvided = Si se ha introducido un t\u00EDtulo de fuente, debe int
 SourceNotProvided = Si el g\u00E9nero es igual a "Art\u00EDculo de revista", "Cap\u00EDtulo de Libro" o "Presentaciones a Congresos" se debe proporcionar al menos una fuente.
 
 SourceTitleNotProvided = Se ha introducido informaci\u00F3n de fuente sin un t\u00EDtulo de fuente.
+
+SourceVolumeNotProvided = [NEW] Der Band der Quelle muss angegeben werden
 
 StatisticsUpdatedDaily = Atenci\u00F3n: Los datos estad\u00EDsticos se actualizan diariamente.
 
