--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -62,6 +62,8 @@ CreatorOrganizationNameNotProvided = An organizations name is not provided.
 
 CreatorRoleNotProvided = \u4F5C\u8005\u7A2E\u5225\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
+DateAcceptedNotProvided = [NEW] Bei einer Promotion muss eine Annahmedatum angegeben werden
+
 DateFormatIncorrect = An entered date is not in one of the following formats: YYYY or YYYY-MM or YYYY-MM-DD.
 
 DateModifiedNotProvided = 2007-01-01\u4EE5\u964D\u306E\u300C\u4FEE\u6B63\u300D\u65E5\u4ED8\u3092\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
@@ -168,6 +170,8 @@ SourceGenreNotProvided = \u51FA\u7248\u7269\u540D\u3092\u5165\u529B\u3057\u305F\
 SourceNotProvided = \u300C\u5B66\u8853\u96D1\u8A8C\u300D\u300C\u66F8\u7C4D\u300D\u300C\u4F1A\u8B70\u8AD6\u6587\u300D\u306E\u8CC7\u6599\u7A2E\u5225\u3067\u306F\u3001\u51FA\u7248\u7269\u60C5\u5831\u3092\u52A0\u3048\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
 SourceTitleNotProvided = \u51FA\u7248\u7269\u540D\uFF08\u63B2\u8F09\u8A8C\u540D\u7B49\uFF09\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+
+SourceVolumeNotProvided = [NEW] Der Band der Quelle muss angegeben werden
 
 StartPageArticleRequiered = Start Page and End Page has to be provided for Journal Article. 
 
