PUBMAN-1520 implemented: Yearbook@PubMan
Former-commit-id: 02b7d7af05b2ea2a706d50c47984b3420e5dc0ea

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1634,6 +1634,8 @@ YearbookItemCreatePage = [NEW] Erstelle Jahrbuch
 
 YearbookMembersPage = [NEW] Mitglieder
 
+YearbookModeratorPage = [NEW ]Jahrb\u00FCcher Verwaltung
+
 YearbookNonCandidatesPage = [NEW] Andere
 
 YearbookPage = [NEW] Jahrbuch
