--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1633,6 +1633,8 @@ YearbookItemCreatePage = [NEW] Create Yearbook
 
 YearbookMembersPage = [NEW] Members
 
+YearbookModeratorPage = [NEW ]Yearbook Admin
+
 YearbookNonCandidatesPage = [NEW] Non Candidates
 
 YearbookPage = [NEW] Yearbook
