--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -1623,6 +1623,8 @@ YearbookItemCreatePage = [NEW] Create Yearbook
 
 YearbookMembersPage = [NEW] Members
 
+YearbookModeratorPage = [NEW ]Yearbook Admin
+
 YearbookNonCandidatesPage = [NEW] Non Candidates
 
 YearbookPage = [NEW] Yearbook
