--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1610,6 +1610,8 @@ YearbookItemCreatePage = [NEW] Create Yearbook
 
 YearbookMembersPage = [NEW] Members
 
+YearbookModeratorPage = [NEW ]Yearbook Admin
+
 YearbookNonCandidatesPage = [NEW] Non Candidates
 
 YearbookPage = [NEW] Yearbook
