Former-commit-id: 0fc1358d7a860fba1cdf1ac041b19ddd4ca0e16c

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1642,6 +1642,10 @@ YearbookPage = [NEW] Jahrbuch
 
 Yearbook_addToYearbook = [NEW] Dem Jahrbuch hinzuf\u00FCgen
 
+Yearbook_createYearbook = [NEW] Erstelle Jahrbuch
+
+Yearbook_member = [NEW] Mitglied
+
 Yearbook_removeFromYearbook = [NEW] Aus dem Jahrbuch entfernen
 
 Yearbook_validate = [NEW] Validieren
@@ -1923,6 +1927,8 @@ chooseWorkspace_descImportWorkspace = Beschreibung Import Bereich Deutsch.
 chooseWorkspace_descQAWorkspace = Beschreibung QA Bereich Deutsch.
 
 chooseWorkspace_descReportWorkspace = Beschreibung  Report Bereich Deutsch.
+
+chooseWorkspace_descYearbookModeratorWorkspace = [NEW] Beschreibung Jahrbuch Moderator Bereich Deutsch.
 
 chooseWorkspace_descYearbookWorkspace = Beschreibung Jahrbuch Bereich Deutsch.
 
