--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1641,6 +1641,10 @@ YearbookPage = [NEW] Yearbook
 
 Yearbook_addToYearbook = [NEW] Add to Yearbook
 
+Yearbook_createYearbook = [NEW] Create Yearbook
+
+Yearbook_member = [NEW] Member
+
 Yearbook_removeFromYearbook = [NEW] Remove from Yearbook
 
 Yearbook_validate = [NEW] Validate
@@ -1922,6 +1926,8 @@ chooseWorkspace_descImportWorkspace = Description Import Workspace English.
 chooseWorkspace_descQAWorkspace = Description QA Workspace English.
 
 chooseWorkspace_descReportWorkspace = Description Report Workspace English.
+
+chooseWorkspace_descYearbookModeratorWorkspace = [NEW] Description Yearbook Moderator Workspace English
 
 chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace English.
 
