--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -21,8 +21,8 @@
 #
 #
 # Copyright 2006-2007 Fachinformationszentrum Karlsruhe Gesellschaft
-# fï¿½r wissenschaftlich-technische Information mbH and Max-Planck-
-# Gesellschaft zur Fï¿½rderung der Wissenschaft e.V.
+# für wissenschaftlich-technische Information mbH and Max-Planck-
+# Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
 AcceptItemPage = Aceptar Item
@@ -1631,6 +1631,10 @@ YearbookPage = [NEW] Yearbook
 
 Yearbook_addToYearbook = [NEW] Add to Yearbook
 
+Yearbook_createYearbook = [NEW] Create Yearbook
+
+Yearbook_member = [NEW] Member
+
 Yearbook_removeFromYearbook = [NEW] Remove from Yearbook
 
 Yearbook_validate = [NEW] Validate
@@ -1868,6 +1872,8 @@ chooseWorkspace_descImportWorkspace = Description Import Workspace Spanish.
 chooseWorkspace_descQAWorkspace = Description QA Workspace Spanish.
 
 chooseWorkspace_descReportWorkspace = Description Report Workspace Spanish.
+
+chooseWorkspace_descYearbookModeratorWorkspace = [NEW] Description Yearbook Moderator Workspace Spanish
 
 chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace Spanish.
 
