--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1618,6 +1618,10 @@ YearbookPage = [NEW] Yearbook
 
 Yearbook_addToYearbook = [NEW] Add to Yearbook
 
+Yearbook_createYearbook = [NEW] Create Yearbook
+
+Yearbook_member = [NEW] Member
+
 Yearbook_removeFromYearbook = [NEW] Remove from Yearbook
 
 Yearbook_validate = [NEW] Validate
@@ -1899,6 +1903,8 @@ chooseWorkspace_descImportWorkspace = Description Import Workspace Japanese.
 chooseWorkspace_descQAWorkspace = Description QA Workspace Japanese.
 
 chooseWorkspace_descReportWorkspace = Description Report Workspace Japanese.
+
+chooseWorkspace_descYearbookModeratorWorkspace = [NEW] Description Yearbook Moderator Workspace Japanese
 
 chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace Japanese.
 
