Former-commit-id: fa45e9ca3a067c79bc8e419a3c5647e19b178d65

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -941,9 +941,13 @@ MultipleImportForm = Importparameter
 
 NewMultipleImport = Massenimport
 
+MultipleImport_configuration = [NEW] Import configuration
+
 NoSearchResultListPage = keine Treffer
 
 NoSearchResultsPage = Keine Treffer
+
+Parameter = [NEW] Parameter
 
 #
 # Quality Assurance / Moderator Workspace
