--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -938,11 +938,15 @@ LoginErrorPage = Login state
 
 MultipleImportForm = Import Parameters
 
+MultipleImport_configuration = [NEW] Import configuration
+
 NewMultipleImport = Multiple Import
 
 NoSearchResultListPage = No Search Results
 
 NoSearchResultsPage = No search results
+
+Parameter = [NEW] Parameter
 
 #
 # Quality Assurance / Moderator Workspace
