--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -929,11 +929,16 @@ LoginErrorPage = Estado de Login
 
 MultipleImportForm = Importar Par\u00E1metros
 
+MultipleImport_configuration = [NEW] Import configuration
+
 NewMultipleImport = Importaci\u00F3n M\u00FAltiple
 
 NoSearchResultListPage = No hay resultados de la b\u00FAsqueda
 
 NoSearchResultsPage = No hay resultados de la b\u00FAsqueda
+
+Parameter = [NEW] Parameter
+
 
 #
 # Quality Assurance / Moderator Workspace
