--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -920,9 +920,13 @@ MultipleImportForm = \u4E00\u62EC\u767B\u9332\u6761\u4EF6\u306E\u6307\u5B9A
 
 NewMultipleImport = \u4E00\u62EC\u767B\u9332
 
+MultipleImport_configuration = [NEW] Import configuration
+
 NoSearchResultListPage = \u691C\u7D22\u7D50\u679C0\u4EF6
 
 NoSearchResultsPage = \u691C\u7D22\u7D50\u679C0\u4EF6
+
+Parameter = [NEW] Parameter
 
 #
 # Quality Assurance / Moderator Workspace
