Former-commit-id: 7c3194d86416bdca13764576a996e620121bde46

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1650,6 +1650,8 @@ Yearbook_createYearbook = [NEW] Erstelle Jahrbuch
 
 Yearbook_member = [NEW] Mitglied
 
+Yearbook_releaseYearbook = [NEW] Jahrbuch freigeben
+
 Yearbook_removeFromYearbook = [NEW] Aus dem Jahrbuch entfernen
 
 Yearbook_validate = [NEW] Validieren
