--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1626,6 +1626,8 @@ Yearbook_createYearbook = [NEW] Create Yearbook
 
 Yearbook_member = [NEW] Member
 
+Yearbook_releaseYearbook = [NEW] Release Yearbook
+
 Yearbook_removeFromYearbook = [NEW] Remove from Yearbook
 
 Yearbook_validate = [NEW] Validate
