--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -214,6 +214,12 @@ Yearbook_ErrorRemovingMembers = [NEW] Fehler beim Entfernen des Datensatzes
 
 Yearbook_ItemAlreadyInYearbook = [NEW] Datensatz befindet sich bereits im Jahrbuch
 
+Yearbook_ItemInvalid = [NEW] Datensatz $1 ist ung\u00FCltig.
+
+Yearbook_ReleaseError = [NEW] Jahrbuch konnte nicht freigegben werden
+
+Yearbook_ReleasedSuccessfully = [NEW] Jahrbuch wurde erfolgreich freigegben.
+
 Yearbook_RemovedItemsFromYearbook = [NEW] Datensatz erfolgreich aus dem Jahrbuch entfernt
 
 basket_ItemsChanged = Datens\u00E4tze haben ihren Status so ver\u00E4ndert dass Sie nicht mehr befugt sind die aktuellste Version zu sehen. Diese Datens\u00E4tze wurden vor\u00FCbergehend aus der Ablage entfernt bis sie wieder zur Verf\u00FCgung stehen.
