--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -214,6 +214,12 @@ Yearbook_ErrorRemovingMembers = [NEW] Error while removing members
 
 Yearbook_ItemAlreadyInYearbook = [NEW] Item is already in Yearbook
 
+Yearbook_ItemInvalid = [NEW] Item $1 is invalid.
+
+Yearbook_ReleaseError = [NEW] Yearbook couldn't be released
+
+Yearbook_ReleasedSuccessfully = [NEW] Yearbook was released successfully.
+
 Yearbook_RemovedItemsFromYearbook = [NEW] Item(s) successfully removed from yearbook
 
 basket_ItemsChanged = item(s) have changed their state in a way that you are not allowed to see the latest version any more. These items have been removed temporarily from your basket until the latest version is available agai
