--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -180,6 +180,12 @@ Yearbook_ErrorRemovingMembers = [NEW] Error while removing members
 
 Yearbook_ItemAlreadyInYearbook = [NEW] Item is already in Yearbook
 
+Yearbook_ItemInvalid = [NEW] Item $1 is invalid.
+
+Yearbook_ReleaseError = [NEW] Yearbook couldn't be released
+
+Yearbook_ReleasedSuccessfully = [NEW] Yearbook was released successfully.
+
 Yearbook_RemovedItemsFromYearbook = [NEW] Item(s) successfully removed from yearbook
 
 basket_ItemsChanged = item(s) han cambiado su estado de forma que usted ya no est\u00E1 autorizado a ver la \u00FAltima versi\u00F3n. Estos items han sido retirados de su cesta temporalmente hasta que la \u00FAltima versi\u00F3n est\u00E9 disponible de nuevo.
