New yearbook validation rules
Former-commit-id: b6e1c78a5d97d600e263a9590d7218089160ce90

--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -123,6 +123,10 @@ PublisherNotProvided = [NEW] Der Verlag muss angegeben werden.
 
 PublisherPlaceNotProvided = [NEW] Der Verlagsort muss angegeben werden.
 
+PublishingDateNotCorrect1 = [NEW] Mindestens ein Ver\u00F6ffentlichungsdatum muss das Jahr des Jahrbuchs haben
+
+PublishingDateNotCorrect2 = [NEW] Jedes Ver\u00F6ffentlichungsdatum sollte das Jahr des Jahrbuchs haben
+
 PublishingDateNotProvided = [NEW] Es muss ein Erscheinungsdatum angegeben werden.
 
 ReviewMethodInternalNotProvided = El M\u00E9todo de Revisi\u00F3n tiene que tener el valor "interno".
