--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -145,6 +145,10 @@ PublisherNotProvided = [NEW] Der Verlag muss angegeben werden.
 
 PublisherPlaceNotProvided = [NEW] Der Verlagsort muss angegeben werden.
 
+PublishingDateNotCorrect1 = [NEW] Mindestens ein Ver\u00F6ffentlichungsdatum muss das Jahr des Jahrbuchs haben
+
+PublishingDateNotCorrect2 = [NEW] Jedes Ver\u00F6ffentlichungsdatum sollte das Jahr des Jahrbuchs haben
+
 PublishingDateNotProvided = [NEW] Es muss ein Erscheinungsdatum angegeben werden.
 
 ReviewMethodInternalNotProvided = \u67FB\u8AAD\u7A2E\u5225\u3092\u300C\u5185\u90E8\u5BE9\u67FB\u300D\u306B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
