--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -142,6 +142,10 @@ PublisherNotProvided = [NEW] Der Verlag muss angegeben werden.
 
 PublisherPlaceNotProvided = [NEW] Der Verlagsort muss angegeben werden.
 
+PublishingDateNotCorrect1 = [NEW] Mindestens ein Ver\u00F6ffentlichungsdatum muss das Jahr des Jahrbuchs haben
+
+PublishingDateNotCorrect2 = [NEW] Jedes Ver\u00F6ffentlichungsdatum sollte das Jahr des Jahrbuchs haben
+
 PublishingDateNotProvided = [NEW] Es muss ein Erscheinungsdatum angegeben werden.
 
 ReviewMethodInternalNotProvided = Es muss eine interne Begutachtung spezifiziert werden.
