labels for reporter workspace
Former-commit-id: 1047e37b72e79068a49964f060a034325cbeaa29

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -955,6 +955,20 @@ Parameter = [NEW] Parameter
 QAWSPage = QA Bereich
 
 #
+# ReportWorkspacePage
+#
+
+ReportWorkspacePage = T\u00E4tigkeitsbericht
+
+ReportWorkspace_lblListKind = Art der Liste
+
+ReportWorkspace_lblAuthorship = Autoreschaften
+
+ReportWorkspace_lblEditorship = Herausgeberschaften
+
+ReportWorkspace_btnGenereateList = Liste erstellen
+
+#
 #ReviseItem
 #
 ReviseItemPage = Zu \u00FCberarbeitender Datensatz
