--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -933,6 +933,8 @@ Parameter = [NEW] Parameter
 #
 QAWSPage = \u7BA1\u7406\u753B\u9762
 
+ReportWorkspacePage = Report Workspace
+
 #
 #ReviseItem
 #
