--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -954,6 +954,11 @@ Parameter = [NEW] Parameter
 QAWSPage = QA Workspace
 
 #
+# ReportWorkspacePage
+#
+ReportWorkspacePage = Report Workspace
+
+#
 #ReviseItem
 #
 ReviseItemPage = Rework Item
