PUBMAN-1520 implemented: Yearbook@PubMan
Former-commit-id: 6bb6a77d235f56cc774f980ff352e1269fec9c40

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -939,9 +939,9 @@ LoginErrorPage = Login Status
 
 MultipleImportForm = Importparameter
 
-NewMultipleImport = Massenimport
-
 MultipleImport_configuration = [NEW] Import configuration
+
+NewMultipleImport = Massenimport
 
 NoSearchResultListPage = keine Treffer
 
@@ -957,16 +957,15 @@ QAWSPage = QA Bereich
 #
 # ReportWorkspacePage
 #
-
 ReportWorkspacePage = T\u00E4tigkeitsbericht
 
-ReportWorkspace_lblListKind = Art der Liste
+ReportWorkspace_btnGenereateList = Liste erstellen
 
 ReportWorkspace_lblAuthorship = Autoreschaften
 
 ReportWorkspace_lblEditorship = Herausgeberschaften
 
-ReportWorkspace_btnGenereateList = Liste erstellen
+ReportWorkspace_lblListKind = Art der Liste
 
 #
 #ReviseItem
@@ -1660,13 +1659,23 @@ YearbookPage = [NEW] Jahrbuch
 
 Yearbook_addToYearbook = [NEW] Dem Jahrbuch hinzuf\u00FCgen
 
+Yearbook_collaboratorUserIds = [NEW] W\u00E4hlen Sie Nutzer ihrer Organisation, die neben Ihnen auch am Jahrbuch arbeiten d\u00FCrfen
+
+Yearbook_contextIds = [NEW]  Sammlungen
+
 Yearbook_createYearbook = [NEW] Erstelle Jahrbuch
 
+Yearbook_date = [NEW] Jahrbuch Datumsgrenzen
+
 Yearbook_member = [NEW] Mitglied
+
+Yearbook_organization = [NEW] Jahrbuch Organisation
 
 Yearbook_releaseYearbook = [NEW] Jahrbuch freigeben
 
 Yearbook_removeFromYearbook = [NEW] Aus dem Jahrbuch entfernen
+
+Yearbook_title = [NEW] Jahrbuch Titel
 
 Yearbook_validate = [NEW] Validieren
 
