--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1650,13 +1650,23 @@ YearbookPage = [NEW] Yearbook
 
 Yearbook_addToYearbook = [NEW] Add to Yearbook
 
+Yearbook_collaboratorUserIds = [NEW] Choose users from your organisation who are allowed to collaborate on the yearbook.
+
+Yearbook_contextIds = [NEW] Collections
+
 Yearbook_createYearbook = [NEW] Create Yearbook
 
+Yearbook_date = [NEW] Yearbbok Date Lines
+
 Yearbook_member = [NEW] Member
+
+Yearbook_organization = [NEW] Yearbook Organization
 
 Yearbook_releaseYearbook = [NEW] Release Yearbook
 
 Yearbook_removeFromYearbook = [NEW] Remove from Yearbook
+
+Yearbook_title = [NEW] Yearbook Title
 
 Yearbook_validate = [NEW] Validate
 
