--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -939,13 +939,13 @@ NoSearchResultsPage = No hay resultados de la b\u00FAsqueda
 
 Parameter = [NEW] Parameter
 
-
 #
 # Quality Assurance / Moderator Workspace
 #
 QAWSPage = QA Workspace
 
 ReportWorkspacePage = Report Workspace
+
 #
 #ReviseItem
 #
@@ -1637,13 +1637,23 @@ YearbookPage = [NEW] Yearbook
 
 Yearbook_addToYearbook = [NEW] Add to Yearbook
 
+Yearbook_collaboratorUserIds = [NEW] Choose users from your organisation who are allowed to collaborate on the yearbook.
+
+Yearbook_contextIds = [NEW] Collections
+
 Yearbook_createYearbook = [NEW] Create Yearbook
 
+Yearbook_date = [NEW] Yearbbok Date Lines
+
 Yearbook_member = [NEW] Member
+
+Yearbook_organization = [NEW] Yearbook Organization
 
 Yearbook_releaseYearbook = [NEW] Release Yearbook
 
 Yearbook_removeFromYearbook = [NEW] Remove from Yearbook
+
+Yearbook_title = [NEW] Yearbook Title
 
 Yearbook_validate = [NEW] Validate
 
