--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -918,9 +918,9 @@ LoginErrorPage = \u30ED\u30B0\u30A4\u30F3\u72B6\u614B
 
 MultipleImportForm = \u4E00\u62EC\u767B\u9332\u6761\u4EF6\u306E\u6307\u5B9A
 
-NewMultipleImport = \u4E00\u62EC\u767B\u9332
-
 MultipleImport_configuration = [NEW] Import configuration
+
+NewMultipleImport = \u4E00\u62EC\u767B\u9332
 
 NoSearchResultListPage = \u691C\u7D22\u7D50\u679C0\u4EF6
 
@@ -1624,13 +1624,23 @@ YearbookPage = [NEW] Yearbook
 
 Yearbook_addToYearbook = [NEW] Add to Yearbook
 
+Yearbook_collaboratorUserIds = [NEW] Choose users from your organisation who are allowed to collaborate on the yearbook.
+
+Yearbook_contextIds = [NEW] Collections
+
 Yearbook_createYearbook = [NEW] Create Yearbook
 
+Yearbook_date = [NEW] Yearbbok Date Lines
+
 Yearbook_member = [NEW] Member
+
+Yearbook_organization = [NEW] Yearbook Organization
 
 Yearbook_releaseYearbook = [NEW] Release Yearbook
 
 Yearbook_removeFromYearbook = [NEW] Remove from Yearbook
+
+Yearbook_title = [NEW] Yearbook Title
 
 Yearbook_validate = [NEW] Validate
 
