PUBMAN-1520 implemented: Yearbook@PubMan
Former-commit-id: 13d013dd80151dfdf41ae729ba136abecbb9f5e4

--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -232,6 +232,14 @@ Yearbook_ReleasedSuccessfully = [NEW] Yearbook was released successfully.
 
 Yearbook_RemovedItemsFromYearbook = [NEW] Item(s) successfully removed from yearbook
 
+Yearbook_createdSuccessfully = [NEW] Yearbook was created successfully and can now be filled with members
+
+Yearbook_creationError = [NEW] Error while creating Yearbook. Please try again later or contact Pubman Support.
+
+Yearbook_grantsAdded = [NEW] Selected Users were authorized to collaborate on the Yearbook
+
+Yearbook_noYearbookFound = [NEW] No yearbook for your organization was found.
+
 basket_ItemsChanged = item(s) have changed their state in a way that you are not allowed to see the latest version any more. These items have been removed temporarily from your basket until the latest version is available again.
 
 #
