--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -226,6 +226,14 @@ Yearbook_ReleasedSuccessfully = [NEW] Jahrbuch wurde erfolgreich freigegben.
 
 Yearbook_RemovedItemsFromYearbook = [NEW] Datensatz erfolgreich aus dem Jahrbuch entfernt
 
+Yearbook_createdSuccessfully = [NEW] Jahrbuch wurde erfolgreich erstellt und kann nun bef\u00FCllt werden
+
+Yearbook_creationError = [NEW] Fehler beim Erstellen des Jahrbuchs. Bitte probieren Sie es sp\u00E4ter noch einmal oder kantaktieren Sie den Pubman Support.
+
+Yearbook_grantsAdded = [NEW] Rechte f\u00FCr weitere Nutzer wurden erfolgfreich erstellt
+
+Yearbook_noYearbookFound = [NEW] Es wurde kein Jahrbuch f\u00FCr Ihre Organisation gefunden
+
 basket_ItemsChanged = Datens\u00E4tze haben ihren Status so ver\u00E4ndert dass Sie nicht mehr befugt sind die aktuellste Version zu sehen. Diese Datens\u00E4tze wurden vor\u00FCbergehend aus der Ablage entfernt bis sie wieder zur Verf\u00FCgung stehen.
 
 #
