--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -192,6 +192,14 @@ Yearbook_ReleasedSuccessfully = [NEW] Yearbook was released successfully.
 
 Yearbook_RemovedItemsFromYearbook = [NEW] Item(s) successfully removed from yearbook
 
+Yearbook_createdSuccessfully = [NEW] Yearbook was created successfully and can now be filled with members
+
+Yearbook_creationError = [NEW] Error while creating Yearbook. Please try again later or contact Pubman Support.
+
+Yearbook_grantsAdded = [NEW] Selected Users were authorized to collaborate on the Yearbook
+
+Yearbook_noYearbookFound = [NEW] No yearbook for your organization was found.
+
 basket_ItemsChanged = item(s) han cambiado su estado de forma que usted ya no est\u00E1 autorizado a ver la \u00FAltima versi\u00F3n. Estos items han sido retirados de su cesta temporalmente hasta que la \u00FAltima versi\u00F3n est\u00E9 disponible de nuevo.
 
 #
