report workspace messages
Former-commit-id: de39ee03d67c45d9c5e9799ca823e16e57d68980

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -572,6 +572,12 @@ multipleImport_description = multipleImport_description
 multiple_import_no_details = Keine Details verf\u00FCgbar
 
 #
+# ReportWorkspace
+#
+OrgIdNotProvided = [NEW] Bitte geben Sie eine Organisation ein
+
+ReportYearNotProvided = [NEW] Bitte geben Sie ein Jahr ein
+#
 # SearchResultList
 #
 searchResultList_NoItemsFound = F\u00FCr Ihre Suchkriterien wurde kein Datensatz gefunden.
