--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -581,6 +581,12 @@ multipleImport_description = multipleImport_description
 multiple_import_no_details = No details available
 
 #
+# ReportWorkspace
+#
+OrgIdNotProvided = [NEW] Please provide an organization for the report
+
+ReportYearNotProvided = [NEW] Please provide an year for the report
+#
 # SearchResultList
 #
 searchResultList_NoItemsFound = No item matches the search criteria.
