--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -533,6 +533,12 @@ multipleImport_description = descripci\u00F3n de importaci\u00F3n m\u00FAltiple
 multiple_import_no_details = No hay detalles disponibles
 
 #
+# ReportWorkspace
+#
+OrgIdNotProvided = [NEW] Please provide an organization for the report
+
+ReportYearNotProvided = [NEW] Please provide an year for the report
+#
 # SearchResultList
 #
 searchResultList_NoItemsFound = Ning\u00FAn item responde al criterio de b\u00FAsqueda.
