--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -575,6 +575,12 @@ mandatoryFieldFS2 = for additional mandatory fields
 multipleImport_description = multipleImport_description
 
 multiple_import_no_details = No details available
+#
+# ReportWorkspace
+#
+OrgIdNotProvided = [NEW] Please provide an organization for the report
+
+ReportYearNotProvided = [NEW] Please provide an year for the report
 
 #
 # SearchResultList
