Former-commit-id: dedbb0a993b3b482f7af5711274b91ab7c54c782

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -959,13 +959,9 @@ QAWSPage = QA Bereich
 #
 ReportWorkspacePage = T\u00E4tigkeitsbericht
 
-ReportWorkspace_btnGenereateList = Liste erstellen
+ReportWorkspace_btnGenereateList = [NEW] Liste erstellen
 
-ReportWorkspace_lblAuthorship = Autoreschaften
-
-ReportWorkspace_lblEditorship = Herausgeberschaften
-
-ReportWorkspace_lblListKind = Art der Liste
+ReportWorkspace_year = [NEW]Jahr
 
 #
 #ReviseItem
