--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -946,6 +946,10 @@ QAWSPage = QA Workspace
 
 ReportWorkspacePage = Report Workspace
 
+ReportWorkspace_btnGenereateList = [NEW] Generate list
+
+ReportWorkspace_year = [NEW]Year
+
 #
 #ReviseItem
 #
