--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -958,6 +958,10 @@ QAWSPage = QA Workspace
 #
 ReportWorkspacePage = Report Workspace
 
+ReportWorkspace_btnGenereateList = [NEW] Generate list
+
+ReportWorkspace_year = [NEW]Year
+
 #
 #ReviseItem
 #
