--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -935,6 +935,10 @@ QAWSPage = \u7BA1\u7406\u753B\u9762
 
 ReportWorkspacePage = Report Workspace
 
+ReportWorkspace_btnGenereateList = [NEW] Generate list
+
+ReportWorkspace_year = [NEW]Year
+
 #
 #ReviseItem
 #
