PUBMAN-1812 fixed: SEO Optimization - Home page
Former-commit-id: 3c67dc033c902593a7bf7b97a02776925b9ca493

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -948,6 +948,8 @@ NoSearchResultsPage = No search results
 
 Parameter = [NEW] Parameter
 
+Pubman_browserTitle = PubMan - an eSciDoc solution for publication data management
+
 #
 # Quality Assurance / Moderator Workspace
 #
