--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -939,6 +939,8 @@ NoSearchResultsPage = No hay resultados de la b\u00FAsqueda
 
 Parameter = [NEW] Parameter
 
+Pubman_browserTitle = PubMan - an eSciDoc solution for publication data management
+
 #
 # Quality Assurance / Moderator Workspace
 #
