--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -949,6 +949,8 @@ NoSearchResultsPage = Keine Treffer
 
 Parameter = [NEW] Parameter
 
+Pubman_browserTitle = PubMan -  eine eSciDoc L\u00F6sung f\u00FCr Publikationsdaten-Management 
+
 #
 # Quality Assurance / Moderator Workspace
 #
