--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -928,6 +928,8 @@ NoSearchResultsPage = \u691C\u7D22\u7D50\u679C0\u4EF6
 
 Parameter = [NEW] Parameter
 
+Pubman_browserTitle = PubMan - an eSciDoc solution for publication data management
+
 #
 # Quality Assurance / Moderator Workspace
 #
