PUBMAN-1812 fixed: SEO Optimization - Home page
Former-commit-id: 99820683a6902260091ef3b2e1b53ca7c3598939

--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -939,7 +939,9 @@ NoSearchResultsPage = No hay resultados de la b\u00FAsqueda
 
 Parameter = [NEW] Parameter
 
-Pubman_browserTitle = PubMan - an eSciDoc solution for publication data management
+Pubman_browserTitle = PubMan
+
+Pubman_descriptionMetaTag = PubMan - an eSciDoc solution for publication data management
 
 #
 # Quality Assurance / Moderator Workspace
