--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -949,7 +949,9 @@ NoSearchResultsPage = Keine Treffer
 
 Parameter = [NEW] Parameter
 
-Pubman_browserTitle = PubMan -  eine eSciDoc L\u00F6sung f\u00FCr Publikationsdaten-Management 
+Pubman_browserTitle = PubMan
+
+Pubman_descriptionMetaTag = PubMan -  eine eSciDoc L\u00F6sung f\u00FCr Publikationsdaten-Management
 
 #
 # Quality Assurance / Moderator Workspace
