--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -928,7 +928,9 @@ NoSearchResultsPage = \u691C\u7D22\u7D50\u679C0\u4EF6
 
 Parameter = [NEW] Parameter
 
-Pubman_browserTitle = PubMan - an eSciDoc solution for publication data management
+Pubman_browserTitle = PubMan
+
+Pubman_descriptionMetaTag = PubMan - an eSciDoc solution for publication data management
 
 #
 # Quality Assurance / Moderator Workspace
