English entry for CreatorGivenNameNotProvided
Former-commit-id: 4187c0496bda5d247627726b07041a1736fd4332

--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -54,7 +54,7 @@ ConfirmRollbackItemVersion = Do you wish to replace the current version with thi
 
 CreatorFamilyNameNotProvided = A creator's family name is not provided.
 
-CreatorGivennameNotProvided = [NEW] Der Vorname des Urhebers muss noch angegeben werden.
+CreatorGivennameNotProvided = The given name of the creator must be provided.
 
 CreatorNotProvided = At least one creator is required.
 
@@ -136,6 +136,11 @@ NoYearbookGenre = [NEW] Dieser Dokumenttyp ist f\u00FCr das Jahrbuch nicht zugel
 
 NumberOfPagesAssumed = Number of pages is assumed.
 
+#
+# ReportWorkspace
+#
+OrgIdNotProvided = [NEW] Please provide an organization for the report
+
 OrganizationNameNotProvided = Organization data was entered without an organization's name.
 
 OrganizationalMetadataNotProvided = At least one creator needs an organizational unit.
@@ -153,6 +158,8 @@ PublishingDateNotCorrect1 = [NEW] Mindestens ein Ver\u00F6ffentlichungsdatum mus
 PublishingDateNotCorrect2 = [NEW] Jedes Ver\u00F6ffentlichungsdatum sollte das Jahr des Jahrbuchs haben
 
 PublishingDateNotProvided = [NEW] Es muss ein Erscheinungsdatum angegeben werden.
+
+ReportYearNotProvided = [NEW] Please provide an year for the report
 
 ReviewMethodInternalNotProvided = The Review Method has to have the value "internal".
 
@@ -580,12 +587,6 @@ multipleImport_description = multipleImport_description
 
 multiple_import_no_details = No details available
 
-#
-# ReportWorkspace
-#
-OrgIdNotProvided = [NEW] Please provide an organization for the report
-
-ReportYearNotProvided = [NEW] Please provide an year for the report
 #
 # SearchResultList
 #
