added english translation
Former-commit-id: 499857c1e4c10191a7599de5c3b5950dcc27c2b7

--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -62,7 +62,7 @@ CreatorOrganizationNameNotProvided = An organizations name is not provided.
 
 CreatorRoleNotProvided = A creator's role is not provided.
 
-DateAcceptedNotProvided = [NEW] Bei einer Promotion muss eine Annahmedatum angegeben werden
+DateAcceptedNotProvided = [NEW] The date of creation must be provided with the Thesis. 
 
 DateFormatIncorrect = An entered date is not in one of the following formats: YYYY or YYYY-MM or YYYY-MM-DD.
 
