label for report added
Former-commit-id: 57573eca8be2a888c93c85e6d78de089906484b4

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -574,9 +574,12 @@ multiple_import_no_details = Keine Details verf\u00FCgbar
 #
 # ReportWorkspace
 #
-OrgIdNotProvided = [NEW] Bitte geben Sie eine Organisation ein
+ReportNoItemsFound = [NEW] Keine Publikationen f\u00FCrr das eingegebene Insitut und Jahr vorhanden
+
+ReportOrgIdNotProvided = [NEW] Bitte geben Sie eine Organisation ein
 
 ReportYearNotProvided = [NEW] Bitte geben Sie ein Jahr ein
+
 #
 # SearchResultList
 #
