--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -136,11 +136,6 @@ NoYearbookGenre = [NEW] Dieser Dokumenttyp ist f\u00FCr das Jahrbuch nicht zugel
 
 NumberOfPagesAssumed = Number of pages is assumed.
 
-#
-# ReportWorkspace
-#
-OrgIdNotProvided = [NEW] Please provide an organization for the report
-
 OrganizationNameNotProvided = Organization data was entered without an organization's name.
 
 OrganizationalMetadataNotProvided = At least one creator needs an organizational unit.
@@ -158,6 +153,13 @@ PublishingDateNotCorrect1 = [NEW] Mindestens ein Ver\u00F6ffentlichungsdatum mus
 PublishingDateNotCorrect2 = [NEW] Jedes Ver\u00F6ffentlichungsdatum sollte das Jahr des Jahrbuchs haben
 
 PublishingDateNotProvided = [NEW] Es muss ein Erscheinungsdatum angegeben werden.
+
+#
+# ReportWorkspace
+#
+ReportNoItemsFound = [NEW] No publications found for the given institute and year.
+
+ReportOrgIdNotProvided = [NEW] Please provide an organization for the report.
 
 ReportYearNotProvided = [NEW] Please provide an year for the report
 
