--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -535,7 +535,9 @@ multiple_import_no_details = No hay detalles disponibles
 #
 # ReportWorkspace
 #
-OrgIdNotProvided = [NEW] Please provide an organization for the report
+ReportNoItemsFound = [NEW] No publications found for the given institute and year
+
+ReportOrgIdNotProvided = [NEW] Please provide an organization for the report
 
 ReportYearNotProvided = [NEW] Please provide an year for the report
 #
