--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -578,9 +578,11 @@ multiple_import_no_details = No details available
 #
 # ReportWorkspace
 #
-OrgIdNotProvided = [NEW] Please provide an organization for the report
+ReportOrgIdNotProvided = [NEW] Please provide an organization for the report
 
 ReportYearNotProvided = [NEW] Please provide an year for the report
+
+ReportNoItemsFound = [NEW] No publications found for the given institute and year.
 
 #
 # SearchResultList
