Former-commit-id: c0d56899a74fdb3004a8994a4f5dfe90266d07c9

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -574,7 +574,7 @@ multiple_import_no_details = Keine Details verf\u00FCgbar
 #
 # ReportWorkspace
 #
-ReportNoItemsFound = [NEW] Keine Publikationen f\u00FCrr das eingegebene Insitut und Jahr vorhanden
+ReportNoItemsFound = [NEW] Keine Publikationen f\u00FCr das eingegebene Insitut und Jahr vorhanden
 
 ReportOrgIdNotProvided = [NEW] Bitte geben Sie eine Organisation ein
 
