PUBMAN-1853 fixed: Create/Update item: confusing handling of OU of creators
Former-commit-id: d14df00293f3b4320c539ac12f522f1e649656c9

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -77,6 +77,8 @@ EnglishAbstractNotProvided = Ein Abstract in Englisch muss eingegeben werden.
 
 EntryIsNotANumber = Die Organisationsnummer bei einem Ersteller ist kein g\u00FCltiger Wert: "$1"
 
+EntryIsNotBound = [NEW] Die Organisationsnummer $1 ist an keine Person gebunden. Bitte f\u00FCgen Sie die Nummer einer Person hinzu oder entfernen Sie die Organisation.
+
 EntryIsNotInValidRange = Die Organisationsnummer bei einem Ersteller ist nicht im g\u00FCltigen Bereich: "$1"
 
 ErrorInOrganizationAssignment = Es trat ein unerwarteter Fehler beim Auslesen der Organisationsnummern auf: "$1"
@@ -147,6 +149,15 @@ PublishingDateNotCorrect1 = [NEW] Mindestens ein Ver\u00F6ffentlichungsdatum mus
 PublishingDateNotCorrect2 = [NEW] Jedes Ver\u00F6ffentlichungsdatum sollte das Jahr des Jahrbuchs haben
 
 PublishingDateNotProvided = [NEW] Es muss ein Erscheinungsdatum angegeben werden.
+
+#
+# ReportWorkspace
+#
+ReportNoItemsFound = [NEW] Keine Publikationen f\u00FCr das eingegebene Insitut und Jahr vorhanden
+
+ReportOrgIdNotProvided = [NEW] Bitte geben Sie eine Organisation ein
+
+ReportYearNotProvided = [NEW] Bitte geben Sie ein Jahr ein
 
 ReviewMethodInternalNotProvided = Es muss eine interne Begutachtung spezifiziert werden.
 
@@ -570,15 +581,6 @@ mandatoryFieldFS2 = auf weitere Pflichtfelder
 multipleImport_description = multipleImport_description
 
 multiple_import_no_details = Keine Details verf\u00FCgbar
-
-#
-# ReportWorkspace
-#
-ReportNoItemsFound = [NEW] Keine Publikationen f\u00FCr das eingegebene Insitut und Jahr vorhanden
-
-ReportOrgIdNotProvided = [NEW] Bitte geben Sie eine Organisation ein
-
-ReportYearNotProvided = [NEW] Bitte geben Sie ein Jahr ein
 
 #
 # SearchResultList
