--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -80,6 +80,8 @@ EnglishAbstractNotProvided = An abstract in "English" has to be provided.
 
 EntryIsNotANumber = The affiliation number of a creator is not valid: "$1"
 
+EntryIsNotBound = [NEW] The affiliation number $1 is not bound to any creator. Please add a creator for this affiliation or remove the affiliation.
+
 EntryIsNotInValidRange = The affiliation number of a creator is not in the valid range: "$1"
 
 ErrorInOrganizationAssignment = An unexpected error occured while assigning affiliations to creators: "$1"
