--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -72,6 +72,8 @@ EndDateWithoutStartDate = Si se proporciona una fecha de inicio de un evento es 
 
 EnglishAbstractNotProvided = Tiene que proporcionar un resumen en "ingl\u00E9s".
 
+EntryIsNotBound = [NEW] The affiliation number $1 is not bound to any creator. Please add a creator for this affiliation or remove the affiliation.
+
 ErrorParsingCreatorString = La cadena de autor est\u00E1 vac\u00EDa o no pudo ser analizada correctamente.
 
 EventNotProvided = Si el g\u00E9nero es igual a "Actas", "Presentaci\u00F3n a Congresos" "Charla en un evento", "Informe de Conferencia" o "Ense\u00F1anza", es necesario proporcionar un evento.
@@ -128,6 +130,15 @@ PublishingDateNotCorrect1 = [NEW] Mindestens ein Ver\u00F6ffentlichungsdatum mus
 PublishingDateNotCorrect2 = [NEW] Jedes Ver\u00F6ffentlichungsdatum sollte das Jahr des Jahrbuchs haben
 
 PublishingDateNotProvided = [NEW] Es muss ein Erscheinungsdatum angegeben werden.
+
+#
+# ReportWorkspace
+#
+ReportNoItemsFound = [NEW] No publications found for the given institute and year
+
+ReportOrgIdNotProvided = [NEW] Please provide an organization for the report
+
+ReportYearNotProvided = [NEW] Please provide an year for the report
 
 ReviewMethodInternalNotProvided = El M\u00E9todo de Revisi\u00F3n tiene que tener el valor "interno".
 
@@ -532,14 +543,6 @@ multipleImport_description = descripci\u00F3n de importaci\u00F3n m\u00FAltiple
 
 multiple_import_no_details = No hay detalles disponibles
 
-#
-# ReportWorkspace
-#
-ReportNoItemsFound = [NEW] No publications found for the given institute and year
-
-ReportOrgIdNotProvided = [NEW] Please provide an organization for the report
-
-ReportYearNotProvided = [NEW] Please provide an year for the report
 #
 # SearchResultList
 #
