--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -80,6 +80,8 @@ EnglishAbstractNotProvided = An abstract in "English" has to be provided.
 
 EntryIsNotANumber = The affiliation number of a creator is not valid: "$1"
 
+EntryIsNotBound = [NEW] The affiliation number $1 is not bound to any creator. Please add a creator for this affiliation or remove the affiliation.
+
 EntryIsNotInValidRange = The affiliation number of a creator is in the valid range: "$1"
 
 ErrorInOrganizationAssignment = An unexpected error occured while assigning affiliations to creators: "$1"
@@ -150,6 +152,15 @@ PublishingDateNotCorrect1 = [NEW] Mindestens ein Ver\u00F6ffentlichungsdatum mus
 PublishingDateNotCorrect2 = [NEW] Jedes Ver\u00F6ffentlichungsdatum sollte das Jahr des Jahrbuchs haben
 
 PublishingDateNotProvided = [NEW] Es muss ein Erscheinungsdatum angegeben werden.
+
+ReportNoItemsFound = [NEW] No publications found for the given institute and year.
+
+#
+# ReportWorkspace
+#
+ReportOrgIdNotProvided = [NEW] Please provide an organization for the report
+
+ReportYearNotProvided = [NEW] Please provide an year for the report
 
 ReviewMethodInternalNotProvided = \u67FB\u8AAD\u7A2E\u5225\u3092\u300C\u5185\u90E8\u5BE9\u67FB\u300D\u306B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
@@ -575,14 +586,6 @@ mandatoryFieldFS2 = for additional mandatory fields
 multipleImport_description = multipleImport_description
 
 multiple_import_no_details = No details available
-#
-# ReportWorkspace
-#
-ReportOrgIdNotProvided = [NEW] Please provide an organization for the report
-
-ReportYearNotProvided = [NEW] Please provide an year for the report
-
-ReportNoItemsFound = [NEW] No publications found for the given institute and year.
 
 #
 # SearchResultList
